--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,13 @@
 
 body {
     margin: 0;
-    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0)), url(./imgs/abstract05.jpg);
+    padding: 0;
+    display: block;
+    overflow-x: hidden;
+    background-image:linear-gradient(rgba(52, 52, 53, 0.5),rgb(31, 31, 41)), url(./imgs/abstract.jpg);
+    background-size: 100% 100%;
     height: 100vh;
-    background-size:cover;
+    background-repeat: no-repeat;
     background-position: center;
 }
 
@@ -25,11 +29,31 @@ h1 {
     padding-bottom: 50px;
 }
 
-.codeblock {
-    background-color:black;
+.dynamic_name span{
+    position: relative;
+}
+
+.dynamic_name span::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    border-left: 2px solid #fff;
+    animation: typing 1.5s steps(20) infinite;
+}
+
+@keyframes typing {
+    100% { 
+        left: 100%;
+        margin: 0 -35px 0 35px;
+    }
 }
 
 code {
+    width:500px;
+    height:100px;
+    border:1px solid #000;
     text-align:left;
 }
 
@@ -49,11 +73,48 @@ code {
     color: #F1F1F1;
 }
 
-#email {
-    font-size: 18px;
+.infinite {
+    position: relative;
+    width: 100%;
+    height: 160px;
+    background: #525252;
+    transform-origin: bottom;
+    transform-style: preserve-3d;
+    transform: perspective(500px) rotateX(30deg);
 }
-
-#resume {
-    padding-top: 50px;
-    padding-right: 30px;
+.infinite:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left:0;
+    width:100%;
+    height: 10px;
+    background: linear-gradient(90deg, #fff 0%, #fff 70%, #525252 70%, #525252 100%);
+    background-size: 120px;
+    animation: animate 0.5s linear infinite;
+}
+@keyframes animate {
+    0% { background-position: 0px; }
+    100% { background-position: -120px; }
+}
+.infinite:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 30px;
+    background: #333;
+    bottom: -30px;
+    transform-origin: top;
+    transform: perspective(500px) rotateX(-25deg);
+}
+.shadow {
+    position: absolute;
+    bottom: -93px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 95%;
+    height: 60px;
+    background: linear-gradient(#000, transparent);
+    opacity: 0.5;
 }
