--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,12 @@ code {
 /*
     Animation for the road
 */
+.roadCont {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .infinite {
     position: relative;
     width: 100%;
@@ -96,9 +102,9 @@ code {
     height: 10px;
     background: linear-gradient(90deg, #fff 0%, #fff 70%, #525252 70%, #525252 100%);
     background-size: 120px;
-    animation: animate 0.5s linear infinite;
+    animation: animateRoad 0.5s linear infinite;
 }
-@keyframes animate {
+@keyframes animateRoad {
     0% { background-position: 0px; }
     100% { background-position: -120px; }
 }
@@ -121,4 +127,46 @@ code {
     height: 60px;
     background: linear-gradient(#000, transparent);
     opacity: 0.5;
+}
+
+/*
+    Rotating box
+*/
+.box {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: animateBox 1s linear infinite;
+}
+@keyframes animateBox {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100px);
+    }
+}
+.square{
+    position: relative;
+    width: 100px;
+    height: 100px;
+    background: #fff;
+    transform-origin: bottom right;
+    animation: animateSquare 1s linear infinite;
+}
+@keyframes animateSquare {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(90deg);
+    }
+}
+.squareButton {
+    background: url(imgs/ico.png) no-repeat;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
