--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Poppins:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=VT323&family=Oxygen:wght@700&family=Poppins:wght@300&display=swap');
 
 body {
     text-align: center !important;
@@ -11,16 +10,16 @@ body {
     background-color: #fff3ae;
     background-repeat: no-repeat;
     background-position: center;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: sans-serif;
     font-family: sans-serif;
 }
 
 h1 {
     color: #363636;
     font-size: 45px;
-    font-variant: small-caps;
-    font-weight: bold;
-    font-family: 'Poppins', sans-serif;
+    /* font-variant: small-caps; */
+    /* font-weight: bold; */
+    font-family: sans-serif;
 }
 
 #title {
@@ -48,16 +47,16 @@ h2 {
 }
 
 h3 {
-    color: #4e4d4d;
-    font-size: 20px;
+    /* color: #4e4d4d; */
+    /* font-size: 20px; */
     font-weight: bold;
     margin-bottom: 0;
     margin-top: 10px;
 }
 
 h4 {
-    color: #4e4d4d;
-    font-size: 19px;
+    /* color: #4e4d4d; */
+    /* font-size: 19px; */
     font-weight: 100;
     margin-top: 0;
 }
@@ -81,6 +80,7 @@ h4 {
     box-shadow: 10px 10px 5px #dfd391;
     max-width: auto;
     width: fit-content;
+    border: 2px solid #555454;
 }
 
 /*
@@ -173,10 +173,11 @@ img {
     /* font-variant: small-caps; */
     text-decoration: none;
     transition: 0.3s;
+    font-family: 'VT323', sans-serif;
 }
 
 .resume-btn:hover {
-    color: #519b5d;
+    color: #181717;
     background-color: #F1F1F1;
     /* font-weight: bold; */
 }
@@ -245,6 +246,7 @@ img {
     box-shadow: 10px 10px 5px #dfd391;
     max-width: auto;
     width: fit-content;
+    border: 2px solid #555454;
 }
 
 .project-description {
@@ -297,6 +299,7 @@ img {
         background-color: rgb(253, 252, 252);
         box-shadow: 10px 10px 5px #aaaaaa;
         /* width: 400px; */
+        border: 2px solid #555454;
     }
 
     .horizontal-flex {
