--- a/mapache/style.css
+++ b/mapache/style.css
@@ -8,6 +8,7 @@
 body {
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 59%, rgba(79,135,190,1) 100%);
+    background-repeat: no-repeat;
 }
 
 h1 {
@@ -40,3 +41,24 @@ a {
     color: blue;
     text-decoration: none;
 }
+
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
