--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,21 @@ h4 {
     border-radius: 20%;
 }
 
+.image-cropper-profile {
+    width: 230px;
+    height: 230px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 20%;
+    transition: transform .2s;
+    z-index: 1;
+    position:relative;
+}
+
+.image-cropper-profile:hover {
+    transform: scale(1.7);
+}
+
 .image-cropper-border {
     width: 230px;
     height: 230px;
